# pdgrid

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
examples/: create_athletes.sql  server.py  server_requirements.txt
pdgrid/: server.py
src/: pdgrid.py  server.py
src/pdgrid/: __init__.py  aggrid.py  pdgrid.py
src/pdgrid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/functional/: test_filter.py  test_grouping.py  test_pagination.py  test_pivot.py  test_stress.py  test_unique_values.py
test/integration/: test_filter.py  test_grouping.py  test_pagination.py  test_stress.py  tests.py
test/manual/: test_server.py  test_stress.py
test/unit/: test_expand_nodes.py  test_filter.py  test_grouping.py  test_pagination.py  test_unique_values.py
