[metadata]
name = pdgrid
version = 0.1.3
author = Svein Lindal
author_email = svein.lindal@gmail.com
description = An interface to pandas for grid data server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slindal/pdgrid
project_urls =
    Bug Tracker = https://github.com/slindal/pdgrid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <3.10
install_requires =
    pandas
[options.packages.find]
where = src